package vehicles;
public class CombustionEngine extends Engine {
    public CombustionEngine() {
        super("Combustion Engine");
    }
}