package vehicles;

public class ElectricEngine extends Engine {
    public ElectricEngine() {
        super("Electric Engine");
    }
}
