package vehicles;

public class HybridEngine extends Engine {
    public HybridEngine() {
        super("Hybrid Engine");
    }
}
